--- a/translations/ru.json
+++ b/translations/ru.json
@@ -3,6 +3,7 @@
     "header": "Виды поблизости",
     "internet_error": "Чтобы показать вам виды поблизости, нам нужен Интернет. Нажмите, чтобы попробовать снова.",
     "no_location": "Местоположение не указано",
+    "no_gps": "Сигнал GPS не найден. Пожалуйста, проверьте, включен ли GPS",
     "no_species": "Похоже, что рядом наблюдалось не так много видов! Попробуйте изменить ваше местоположение или расширить фильтр видов.",
     "input_location_above_map": "Местоположение не найдено; введите вверху название местоположения для загрузки карты и поиска видов поблизости",
     "error_alert_location_services": "Для продолжения включите службы определения местоположения в настройках устройства",
@@ -126,7 +127,12 @@
     "learn_more_about_data_storage": "Мы храним личную информацию, такую, как имена пользователей и адреса электронной почты, чтобы управлять аккаунтами на этом сайте, и, в соответствии с законами о защите конфиденциальности, вы должны отметить этот флажок, чтобы указать, что вы согласны с использованием персональных данных. Подробнее о том, какую информацию мы собираем и как мы ее используем, в нашей Политике конфиденциальности и наших Условиях предоставления услуг.",
     "learn_more_about_licensing": "Установите этот флажок, если вы хотите использовать лицензию Creative Commons Attribution-NonCommercial (с указанием авторства-некоммерческая) для загружаемого контента. Это означает, что любой может копировать и повторно использовать ваши фото и/или наблюдения, не спрашивая вашего разрешения, поскольку они признали, что не будут использовать работы в коммерческих целях. Вы можете выбрать другой вид лицензии, но эта - наилучшая для совместного использования с исследователями.",
     "about_personal_information": "О персональных данных",
-    "about_licenses": "О лицензиях"
+    "about_licenses": "О лицензиях",
+    "transfer_data": "Я даю согласие на передачу моей личной информации в Соединенные Штаты Америки",
+    "learn_more_about_data_transfer": "Некоторые законы о конфиденциальности данных, такие как Общий регламент защиты персональных  данных Европейского союза (GDPR), требуют явного согласия на передачу личной информации из их юрисдикции в другие юрисдикции, где правовая защита этой информации считается недостаточной. С 2020 года Европейский союз больше не считает Соединенные Штаты юрисдикцией, обеспечивающей надлежащую правовую защиту личной информации, в частности, из-за возможности того, что правительство США будет следить за данными, поступающими в США. Вполне возможно, что другие юрисдикции могут иметь такое же мнение.",
+    "learn_more_about_data_transfer_2": " Использование iNaturalist требует хранения личной информации, такой как ваш адрес электронной почты, все данные iNaturalist хранятся в Соединенных Штатах, и мы не знаем, в какой правовой юрисдикции вы находитесь, когда используете iNaturalist, поэтому для соблюдения законов о конфиденциальности, таких как GDPR, вы должны подтвердить, что понимаете и принимаете этот риск и согласие на передачу вашей личной информации на серверы iNaturalist в США. ",
+    "learn_more_about_data_transfer_3": "Чтобы узнать больше о том, какую информацию мы собираем и как мы ее используем, пожалуйста, ознакомьтесь с нашими <privacy>{{privacy}}</privacy> и <terms>{{terms}}</terms>.",
+    "learn_more_about_data_transfer_4": "Невозможно создать учетную запись iNaturalist без хранения личной информации, поэтому единственный способ отозвать это согласие - удалить свою учетную запись."
   },
   "inat_login": {
     "log_in_with_inat": "Войти с помощью вашей учетной записи iNaturalist",
@@ -142,7 +148,8 @@
     "reset": "Сбросить мой пароль",
     "check_email": "Проверьте вашу электронную почту!",
     "reset_instructions": "Мы отправили инструкции по восстановлению пароля на вашу электронную почту.",
-    "return_login": "Вернуться к авторизации"
+    "return_login": "Вернуться к авторизации",
+    "authentication_failed": "Ошибка аутентификации"
   },
   "privacy": {
     "header": "Политика конфиденциальности"
@@ -658,6 +665,10 @@
   },
   "debug": {
     "logs": "Отправить журнал отладки по электронной почте"
+  },
+  "shortcut": {
+    "seek_camera": "Камера Seek",
+    "subtitle": "Для быстрой идентификации"
   },
   "settings": {
     "header": "Камера Seek",
