--- a/translations/es-MX.json
+++ b/translations/es-MX.json
@@ -3,6 +3,7 @@
     "header": "Especies en las cercanías",
     "internet_error": "Necesitamos acceso a internet para generar especies en las cercanías. Toca para intentarlo de nuevo.",
     "no_location": "Sin ubicación",
+    "no_gps": "No se ha encontrado señal de GPS. Por favor, compruebe que tiene el GPS encendido",
     "no_species": "¡Parece que no ha habido muchas especies observadas en las cercanías! Intenta cambiar tu ubicación o ampliar el filtro de especies.",
     "input_location_above_map": "No se ha encontrado ninguna ubicación; introduzca arriba el nombre de un lugar para cargar el mapa y buscar especies cercanas",
     "error_alert_location_services": "Para continuar, activa los servicios de localización en la configuración de tu dispositivo",
@@ -126,7 +127,12 @@
     "learn_more_about_data_storage": "Almacenamos información personal como nombres de usuario y direcciones de correo electrónico para gestionar cuentas en este sitio, y para cumplir con las leyes de privacidad, necesitamos que marque esta casilla para indicar que usted da su consentimiento a este uso de la información personal. Para saber más sobre la información que recopilamos y cómo la utilizamos, consulte nuestra Política de Privacidad y Términos de Servicio.",
     "learn_more_about_licensing": "Marque esta casilla si desea aplicar una licencia de Creative Commons Atribución-No Comercial al contenido subido. Esto significa que cualquiera puede copiar y reutilizar sus fotos y/o observaciones sin pedir permiso siempre y cuando le den crédito y no utilicen las obras comercialmente. Usted puede elegir una licencia diferente o eliminar la licencia más adelante, pero esta es la mejor licencia para compartir con los investigadores.",
     "about_personal_information": "Sobre la información personal",
-    "about_licenses": "Acerca de las licencias"
+    "about_licenses": "Acerca de las licencias",
+    "transfer_data": "Doy mi consentimiento para permitir que mi información personal se transfiera a los Estados Unidos de América",
+    "learn_more_about_data_transfer": "Algunas leyes de privacidad de datos, como la Regulación General de Protección de Datos de la Unión Europea (RPD), requieren el consentimiento explícito para transferir información personal de sus jurisdicciones a otras jurisdicciones en las que la protección legal de esta información no sea considerada adecuada. A partir de 2020, la Unión Europea ya no considera que los Estados Unidos sean una jurisdicción que proporcione una protección jurídica adecuada de la información personal, específicamente debido a la posibilidad de que el gobierno de Estados Unidos vigile los datos que entran en ese país. Es posible que otras jurisdicciones tengan la misma opinión.",
+    "learn_more_about_data_transfer_2": "El uso de iNaturalist requiere el almacenamiento de información personal como tu dirección de correo electrónico, todos los datos de iNaturalist se almacenan en los Estados Unidos de América, y no podemos estar seguros de la jurisdicción legal en la que estás usando iNaturalist, así para cumplir con las leyes de privacidad como el GDPR, debe reconocer que comprende y acepta este riesgo y consentimiento para transferir su información personal a los servidores de iNaturalist en los Estados Unidos de América.",
+    "learn_more_about_data_transfer_3": "Para obtener más información sobre qué información recopilamos y cómo la usamos, por favor consulte nuestros <privacy>{{privacy}}</privacy> y <terms>{{terms}}</terms>.",
+    "learn_more_about_data_transfer_4": "No hay forma de tener una cuenta de iNaturalist sin almacenar información personal así que la única forma de revocar este consentimiento es eliminar su cuenta."
   },
   "inat_login": {
     "log_in_with_inat": "Inicia sesión con tu cuenta de iNaturalist",
@@ -142,7 +148,8 @@
     "reset": "Restablecer mi contraseÒa",
     "check_email": "Comprueba tu correo electrónico",
     "reset_instructions": "Hemos enviado las instrucciones para restablecer la contraseÒa a tu correo electrónico.",
-    "return_login": "Volver al inicio de sesión"
+    "return_login": "Volver al inicio de sesión",
+    "authentication_failed": "Autenticación fallida"
   },
   "privacy": {
     "header": "Política de privacidad"
@@ -658,6 +665,10 @@
   },
   "debug": {
     "logs": "Enviar registros vía email"
+  },
+  "shortcut": {
+    "seek_camera": "Cámara de Seek",
+    "subtitle": "Para identificaciones rápidas"
   },
   "settings": {
     "header": "Cámara de Seek",
