--- a/translations/ro.json
+++ b/translations/ro.json
@@ -3,6 +3,7 @@
     "header": "Specii din apropiere",
     "internet_error": "Avem nevoie de internet ca să generăm specii din apropiere. Atinge pentru a încerca din nou.",
     "no_location": "Fără Locație",
+    "no_gps": "Nu s-a găsit niciun semnal GPS. Vă rugăm să verificați de două ori dacă ați activat GPS-ul",
     "no_species": "Se pare că nu au fost observate multe specii în apropiere! Încearcă să schimbi locația sau să extinzi filtrul de specii.",
     "input_location_above_map": "Nu a fost găsită nicio poziționare; introduceți o denumire pentru reperul de mai sus pentru a încărca harta și a căuta specii din apropriere",
     "error_alert_location_services": "Pentru a continua, activați serviciile de poziționare disponibile pe dispozitivul dumneavoastră.",
@@ -126,7 +127,12 @@
     "learn_more_about_data_storage": "Stocăm informații personale precum nume de utilizator și adrese de e-mail pentru a gestiona conturile de pe acest site, și pentru a respecta legile de confidențialitate, trebuie să bifezi această casetă pentru a indica faptul că dai acordul acestei utilizări a informațiilor personale. Pentru a afla mai multe despre ce informații colectăm și cum le folosim, te rugăm să consulți Politica noastră de confidențialitate și Termenii și condițiile noastre.",
     "learn_more_about_licensing": "Bifează această casetă dacă dorești să aplici o licență \"Creative Commons Attribution-NonCommercial\" pentru conținutul încărcat. Acest lucru înseamnă că oricine poate copia și reutiliza fotografiile și/sau observațiile fără a cere permisiunea, atâta timp cât îți acordă credit și nu utilizează lucrările în scopuri comerciale. Poți alege o altă licență sau poți elimina licența mai târziu, dar aceasta este cea mai bună licență pentru partajarea cu cercetătorii.",
     "about_personal_information": "Despre Informații Personale",
-    "about_licenses": "Despre Licențe"
+    "about_licenses": "Despre Licențe",
+    "transfer_data": "Sunt de acord ca informațiile mele personale să fie transferate în Statele Unite ale Americii.",
+    "learn_more_about_data_transfer": "Unele legi privind confidențialitatea datelor, cum ar fi Regulamentul general privind protecția datelor (GDPR) al Uniunii Europene, necesită un consimțământ explicit pentru a transfera informații personale din jurisdicțiile lor către alte jurisdicții în care protecția juridică a acestor informații nu este considerată adecvată. Începând din 2020, Uniunea Europeană nu mai consideră că Statele Unite sunt o jurisdicție care asigură o protecție juridică adecvată a informațiilor personale, în special din cauza posibilității ca guvernul SUA să supravegheze datele care intră în SUA. Este posibil ca și alte jurisdicții să aibă aceeași opinie.",
+    "learn_more_about_data_transfer_2": "Utilizarea iNaturalist necesită stocarea de informații personale, cum ar fi adresa dvs. de e-mail, toate datele iNaturalist sunt stocate în Statele Unite și nu putem fi siguri în ce jurisdicție legală vă aflați atunci când utilizați iNaturalist, astfel încât, pentru a respecta legile privind confidențialitatea, cum ar fi GDPR, trebuie să recunoașteți că înțelegeți și acceptați acest risc și să consimțiți la transferul informațiilor dvs. personale către serverele iNaturalist din SUA.",
+    "learn_more_about_data_transfer_3": "Pentru a afla mai multe despre informațiile pe care le colectăm și despre modul în care le folosim, vă rugăm să consultați <privacy>{{privacy}}</privacy> și <terms>{{terms}}</terms>.",
+    "learn_more_about_data_transfer_4": "Nu există nicio modalitate de a avea un cont iNaturalist fără a stoca informații personale, astfel încât singura modalitate de a revoca acest consimțământ este să vă ștergeți contul."
   },
   "inat_login": {
     "log_in_with_inat": "Conectează-te cu contul tău iNaturalist",
@@ -142,7 +148,8 @@
     "reset": "Resetați-mi parola",
     "check_email": "Verifică-ți e-mailul!",
     "reset_instructions": "V-am trimis instrucțiuni de resetare a parolei prin e-mail.",
-    "return_login": "Înapoi la Conectare"
+    "return_login": "Înapoi la Conectare",
+    "authentication_failed": "Autentificarea a eșuat"
   },
   "privacy": {
     "header": "Politica Intimității"
@@ -658,6 +665,10 @@
   },
   "debug": {
     "logs": "Trimite jurnale de depanare prin e-mail"
+  },
+  "shortcut": {
+    "seek_camera": "Camera Seek",
+    "subtitle": "Pentru identificări rapide"
   },
   "settings": {
     "header": "Camera Seek",
